--- a/Bro_IDS/bro_ssl.conf
+++ b/Bro_IDS/bro_ssl.conf
@@ -12,7 +12,7 @@
 
 <Extension _brosslsubject>
     Module	xm_kvp
-    Delimiter \t
+    Delimiter =
     UndefValue	-
     EscapeControl FALSE
 </Extension>
