--- a/Linux/linux_audit.conf
+++ b/Linux/linux_audit.conf
@@ -14,7 +14,9 @@
     File	"/var/log/audit/audit.log"
     SavePos	TRUE
     Exec	_selinux->parse_kvp();\
-    		$meta = "audit";\
-			$tag = "selinux";\
+			$Hostname = host_ip();\
+			$FQDN = hostname_fqdn();\
+			$tag = "audit";\
+			$SourceName = "selinux";\
     		to_json();
 </Input>
