--- a/Linux/linux_kernel.conf
+++ b/Linux/linux_kernel.conf
@@ -4,7 +4,11 @@
 
 <Input kernel>
     Module	im_kernel
-    Exec	to_json(); to_syslog_bsd();
+    Exec	$Hostname = host_ip();\
+			$FQDN = hostname_fqdn();\
+			$tag = "audit";\
+			$SourceName = "kernel";\
+			to_json();
     <Schedule>
   #Hourly KERNEL rate monitoring
   Every	3600 sec
