--- a/Windows/ms_dhcpv6.conf
+++ b/Windows/ms_dhcpv6.conf
@@ -16,14 +16,13 @@
     SavePos	TRUE
     Exec	_dhcpv6->parse_csv();\
 			$eventtime = $date + " " + $time;\
-			$class = "ms_dhcp";\
-			$metaclass = "windows";\
-			rename_field("EventReceivedTime", "detectedtime");\
-			rename_field("SourceModuleName", "filename");\
-			rename_field("SourceModuleType", "filetype");\
+			$Hostname = host_ip();\
+			$FQDN = hostname_fqdn();\
+			$tag = "dhcp";\
+			$SourceName = "microsoft_dhcp";\
 			delete($date);\
 			delete($time);
-			to_json(); to_syslog_bsd();
+			to_json();
     <Schedule>
   #Hourly MS_DHCPv6 rate monitoring
   Every	3600 sec
