--- a/Windows/ms_dns.conf
+++ b/Windows/ms_dns.conf
@@ -21,6 +21,10 @@
     		_msdns->parse_csv();\
 			$eventtime = parsedate($date + " " + $time);\
 			if $domain =~ s/(\([1-9]*\))/./g; if $domain =~ s/\(0\)/ /g;\
+			$Hostname = host_ip();\
+			$FQDN = hostname_fqdn();\
+			$tag = "dns";\
+			$SourceName = "microsoft_dns";\
 			delete("date");\
 			delete("time");\
 			to_json();
