--- a/Windows/ms_exchangev15.conf
+++ b/Windows/ms_exchangev15.conf
@@ -25,6 +25,10 @@
     		{\
 			  _csv_exchmt->parse_csv();\
 			  _kvp_exchmt->parse_kvp($info);\
+			  $Hostname = host_ip();\
+			  $FQDN = hostname_fqdn();\
+			  $tag = "email";\
+			  $SourceName = "microsoft_exchange";\
 			  to_json();\
 			}
     <Schedule>
