--- a/Windows/ms_iisv6.conf
+++ b/Windows/ms_iisv6.conf
@@ -20,14 +20,13 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_iis";\
-# 			  $metaclass = "windows";\
-# 			  rename_field("EventReceivedTime", "detectedtime");\
-# 			  rename_field("SourceModuleName", "filename");\
-# 			  rename_field("SourceModuleType", "filetype");\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#     		  to_json(); to_syslog_bsd();\
+#     		  to_json();\
 #			}
 # </Input>
 
@@ -41,15 +40,13 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_ftp";\
-# 			  $metaclass = "windows";\
-# 			  rename_field("EventReceivedTime", "detectedtime");\
-# 			  rename_field("SourceModuleName", "filename");\
-# 			  rename_field("SourceModuleType", "filetype");\
-# 			  rename_field("SourceModuleType", "filetype");\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json(); to_syslog_bsd();\
+#			  to_json();\
 #			}
 # </Input>
 
@@ -63,15 +60,13 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_smtp";\
-# 			  $metaclass = "windows";\
-# 			  rename_field("EventReceivedTime", "detectedtime");\
-# 			  rename_field("SourceModuleName", "filename");\
-# 			  rename_field("SourceModuleType", "filetype");\
-# 			  rename_field("SourceModuleType", "filetype");\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json(); to_syslog_bsd();\
+#			  to_json();\
 #			}
 # </Input>
 
