--- a/Windows/ms_iisv7.conf
+++ b/Windows/ms_iisv7.conf
@@ -20,7 +20,10 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_iis";\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
 #			  to_json();\
@@ -37,7 +40,10 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_iis";\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
 #			  to_json();\
@@ -54,7 +60,10 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $class = "ms_iis";\
+# 			  $Hostname = host_ip();\
+# 			  $FQDN = hostname_fqdn();\
+# 			  $tag = "web";\
+# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
 #			  to_json();\
