--- a/Windows/master_windows.conf
+++ b/Windows/master_windows.conf
@@ -165,11 +165,11 @@ LogFile %ROOT%\data\nxlog.log
 # </Input>
 
 ##############################################
-# 0UTPUT TAP Senders (UNENCRYPTED)           #
+# OUTPUT (UNENCRYPTED)                       #
 # (uncomment second sender stanza if needed) #
 ##############################################
 
-# <Output sender1>
+# <Output tcpout1>
 #     Module	om_tcp
 #     Host		x.x.x.x
 #     Port		514
@@ -179,12 +179,12 @@ LogFile %ROOT%\data\nxlog.log
 #   Every		3600 sec
 #   Exec		if defined get_stat("1tcpouthourly") \
 #   {\
-#     log_warning(get_stat("1tcpouthourly") + " messages forwarded to Sender#1-TCP in past 1 hour"); \
+#     log_warning(get_stat("1tcpouthourly") + " messages forwarded to tcpout#1-TCP in past 1 hour"); \
 #   }
 #     </Schedule>
 # </Output>
 
-# <Output sender2>
+# <Output tcpout2>
 #     Module	om_tcp
 #     Host		x.x.x.x
 #     Port		514
@@ -194,20 +194,20 @@ LogFile %ROOT%\data\nxlog.log
 #   Every		3600 sec
 #   Exec		if defined get_stat("2tcpouthourly") \
 #   {\
-#     log_warning(get_stat("2tcpouthourly") + " messages forwarded to Sender#2-TCP in past 1 hour"); \
+#     log_warning(get_stat("2tcpouthourly") + " messages forwarded to tcpout#2-TCP in past 1 hour"); \
 #   }
 #     </Schedule>
 # </Output>
 
 ##############################################
-# OUTPUT TAP Senders (ENCRYPTED)             #
+# OUTPUT (ENCRYPTED)                         #
 # (uncomment second sender stanza if needed) #
 ##############################################
 
-<Output sender1>
+<Output sslout1>
     Module	om_ssl
     Host	x.x.x.x
-    Port	514
+    Port	1514
     AllowUntrusted TRUE
     Exec	create_stat("1sslouthourly", "RATE", 3600); add_stat("1sslouthourly", 1);
     <Schedule>
@@ -220,10 +220,10 @@ LogFile %ROOT%\data\nxlog.log
     </Schedule>
 </Output>
 
-# <Output sender2>
+# <Output sslout2>
 #     Module	om_ssl
 #     Host		x.x.x.x
-#     Port		514
+#     Port		1514
 #     AllowUntrusted TRUE
 #     Exec	create_stat("2sslouthourly", "RATE", 3600); add_stat("2sslouthourly", 1);
 #     <Schedule>
@@ -237,7 +237,7 @@ LogFile %ROOT%\data\nxlog.log
 # </Output>
 
 ########################################
-# Default Route                        #
+# Routing                              #
 ########################################
 
 <Route primary>
