--- a/Windows/master_windows.conf
+++ b/Windows/master_windows.conf
@@ -204,21 +204,20 @@ LogFile %ROOT%\data\nxlog.log
 # (uncomment second sender stanza if needed) #
 ##############################################
 
-<Output sslout1>
-    Module	om_ssl
-    Host	x.x.x.x
-    Port	1514
-    AllowUntrusted TRUE
-    Exec	create_stat("1sslouthourly", "RATE", 3600); add_stat("1sslouthourly", 1);
-    <Schedule>
-  #Hourly TCP rate monitoring
-  Every		3600 sec
-  Exec		if defined get_stat("1sslouthourly") \
-  {\
-    log_warning(get_stat("1sslouthourly") + " messages forwarded to Sender#1-SSL in past 1 hour"); \
-  }
-    </Schedule>
-</Output>
+# <Output sslout1>
+#     Module	om_ssl
+#     Host	127.0.0.1
+#     Port	1514
+#     Exec	create_stat("1outhourly", "RATE", 3600); add_stat("1outhourly", 1);
+#     <Schedule>
+#   #Hourly TCP rate monitoring
+#   Every		3600 sec
+#   Exec		if defined get_stat("1outhourly") \
+#   {\
+#     log_warning(get_stat("1outhourly") + " messages forwarded to sslout#1 in past 1 hour"); \
+#   }
+#     </Schedule>
+# </Output>
 
 # <Output sslout2>
 #     Module	om_ssl
