--- a/Bro_IDS/bro_conn.conf
+++ b/Bro_IDS/bro_conn.conf
@@ -1,16 +1,10 @@
 ########################################
-# INPUT BRO IDS CONN Configurations     #
-########################################
-
-define BROCONNFILE /nsm/bro/logs/current/conn.log
-
-########################################
 # INPUT BRO IDS CONN Log               #
 ########################################
 
 <Extension _broconn>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$protocol,$service,$duration,$sentbytes,$rcvdbytes,$connstate,$localorig,$missingbytes,$history,$sentpackets,$sentipbytes,$rcvdpackets,$rcvdipbytes,$tunnelparents,$origcc,$respcc,$sensor
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$service,$duration,$orig_bytes,$resp_bytes,$conn_state,$local_orig,$missed_bytes,$history,$orig_pkts,$orig_ip_bytes,$resp_pkts,$resp_ip_bytes,$tunnel_parents,$orig_cc,$resp_cc,$sensorname
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
@@ -22,34 +16,12 @@ define BROCONNFILE /nsm/bro/logs/current/conn.log
 
 <Input bro_conn>
     Module	im_file
-    File	%BROCONNFILE%
+    File	"/nsm/bro/logs/current/conn.log"
     SavePos	TRUE
     Exec	if $raw_event =~ /^#/ drop();\
     		else\
     		{\
     		  _broconn->parse_csv();\
-			  $Hostname = host_ip();\
-			  $SyslogFacilityValue = "LOCAL";\
-			  $SyslogSeverity = "INFO";\
-			  $Severity = "INFO";\
-			  $SourceName = "bro";\
-			  $tag = "connection";\
-			  to_json();\
+			  to_syslog_ietf();\
 			}
-    <Schedule>
-  #Hourly bro_conn rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("broconn_hourly") \
-  {\
-    log_warning(get_stat("broconn_hourly") + " messages received from input BRO_CONN in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute bro_conn rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("broconn_rate") and get_stat("broconn_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_CONN for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
