--- a/Bro_IDS/bro_ssl.conf
+++ b/Bro_IDS/bro_ssl.conf
@@ -4,15 +4,8 @@
 
 <Extension _brossl>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$protocolver,$cipher,$hostname,$sessionid,$certsubject,$issuersubject,$issuetimeutc,$expirationtimeutc,$lastalert,$clientsubject,$clientissuersubject,$md5,$validationstatus
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$version,$cipher,$curve,$server_name,$session_id,$last_alert,$established,$cert_chain_fuids,$client_cert_chain_fuids,$subject,$issuer,$client_subject,$client_issuer,$validation_status
     Delimiter \t
-    UndefValue	-
-    EscapeControl FALSE
-</Extension>
-
-<Extension _brosslsubject>
-    Module	xm_kvp
-    Delimiter =
     UndefValue	-
     EscapeControl FALSE
 </Extension>
@@ -25,26 +18,6 @@
 			else\
     		{\
 			  _brossl->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "web";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_SSL rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brossl_hourly") \
-  {\
-    log_warning(get_stat("brossl_hourly") + " messages received from input BRO_SSL in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_SSL rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brossl_rate") and get_stat("brossl_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_SSL for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
