--- a/bro_ids/bro_app_stats.conf
+++ b/bro_ids/bro_app_stats.conf
@@ -1,23 +1,23 @@
 ########################################
-# INPUT BRO IDS Syslog Log             #
+# INPUT BRO IDS App Stats Log          #
 ########################################
 
-<Extension _brosyslog>
+<Extension _broapp>
     Module	xm_csv
-    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$facility,$severity,$message
+    Fields	$ts,$ts_delta,$app,$uniq_hosts,$hits,$bytes
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
 </Extension>
 
-<Input bro_syslog>
+<Input bro_files>
     Module	im_file
-    File	"/nsm/bro/logs/current/ssl.log"
+    File	"/nsm/bro/logs/current/app_stats.log"
     SavePos	TRUE
     Exec	if $raw_event =~ /^#/ drop();\
-    		else\
+        	else\
     		{\
-    		  _brosyslog->parse_csv();\
+    		  _broapp->parse_csv();\
 			  to_syslog_ietf();\
             }
 </Input>
