--- a/bro_ids/bro_dhcp.conf
+++ b/bro_ids/bro_dhcp.conf
@@ -1,23 +1,23 @@
 ########################################
-# INPUT BRO IDS Syslog Log             #
+# INPUT BRO IDS DHCP Log               #
 ########################################
 
-<Extension _brosyslog>
+<Extension _brodhcp>
     Module	xm_csv
-    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$facility,$severity,$message
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$mac,$assigned_ip,$lease_time,$trans_id
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
 </Extension>
 
-<Input bro_syslog>
+<Input bro_dhcp>
     Module	im_file
-    File	"/nsm/bro/logs/current/ssl.log"
+    File	"/nsm/bro/logs/current/dhcp.log"
     SavePos	TRUE
     Exec	if $raw_event =~ /^#/ drop();\
     		else\
     		{\
-    		  _brosyslog->parse_csv();\
+    		  _brodhcp->parse_csv();\
 			  to_syslog_ietf();\
             }
 </Input>
