--- a/Bro_IDS/bro_dns.conf
+++ b/Bro_IDS/bro_dns.conf
@@ -1,16 +1,10 @@
 ########################################
-# INPUT BRO IDS DNS Configurations     #
-########################################
-
-define BRODNSFILE '/nsm/bro/logs/current/dns.log'
-
-########################################
 # INPUT BRO IDS DNS Extension          #
 ########################################
 
 <Extension _brodns>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$protocol,$transactionid,$query,$queryclass,$queryclassname,$querytype,$querytypename,$responsecode,$responsecodename,$authoritativeanswer,$truncationbit,$recursiondesired,$recursionavailable,$z,$answer,$ttl,$rejected
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$trans_id,$query,$qclass,$qclass_name,$qtype,$qtype_name,$rcode,$rcode_name,$AA,$TC,$RD,$RA,$Z,$answers,$TTLs,$rejected
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
@@ -22,34 +16,12 @@ define BRODNSFILE '/nsm/bro/logs/current/dns.log'
 
 <Input bro_dns>
     Module	im_file
-    File	%BRODNSFILE%
+    File	"/nsm/bro/logs/current/dns.log"
     SavePos	TRUE
     Exec	if $raw_event =~ /^#/ drop();\
     		else\
     		{\
     		  _brodns->parse_csv();\
-    		  $Hostname = host_ip();\
-			  $SyslogFacilityValue = "LOCAL";\
-			  $SyslogSeverity = "INFO";\
-			  $Severity = "INFO";\
-			  $SourceName = "bro";\
-			  $tag = "dns";\
-			  to_json();\
+			  to_syslog_ietf();\
 			}
-    <Schedule>
-  #Hourly BRO_DNS rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brodns_hourly") \
-  {\
-    log_warning(get_stat("brodns_hourly") + " messages received from input BRO_DNS in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_DNS rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brodns_rate") and get_stat("brodns_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_DNS for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
