--- a/Bro_IDS/bro_files.conf
+++ b/Bro_IDS/bro_files.conf
@@ -4,7 +4,7 @@
 
 <Extension _brofiles>
     Module	xm_csv
-    Fields	$eventtimeutc,$fileid,$srcipv4,$dstipv4,$connectionid,$source,$depth,$analyzer,$mimetype,$filename,$duration,$localorig,$isorig,$seenbytes,$bytes,$missingbytes,$overflowbytes,$timeout,$parentfileid,$md5,$sha1,$sha256,$extracted
+    Fields	$ts,$fuid,$tx_hosts,$rx_hosts,$conn_uids,$source,$depth,$analyzers,$mime_type,$filename,$duration,$local_orig,$is_orig,$seen_bytes,$total_bytes,$missing_bytes,$overflow_bytes,$timedout,$parent_fuid,$md5,$sha1,$sha256,$extracted
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
@@ -18,26 +18,6 @@
         	else\
     		{\
     		  _brofiles->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "files";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_FILES rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brofiles_hourly") \
-  {\
-    log_warning(get_stat("brofiles_hourly") + " messages received from input BRO_FILES in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_FILES rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brofiles_rate") and get_stat("brofiles_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_FILES for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
