--- a/Bro_IDS/bro_http.conf
+++ b/Bro_IDS/bro_http.conf
@@ -4,7 +4,7 @@
 
 <Extension _brohttp>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$depth,$httpmethod,$domain,$uri,$referrer,$useragent,$sentbodybytes,$rcvdbodybytes,$status,$statusmsg,$infocode,$infomsg,$filename,$tags,$username,$password,$proxied,$sentfileid,$sentmimetype,$rcvdfileid,$rcvdmimetype
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$trans_depth,$method,$host,$uri,$referrer,$user_agent,$request_body_len,$response_body_len,$status_code,$status_msg,$info_code,$info_msg,$filename,$tags,$username,$password,$proxied,$orig_fuids,$orig_mime_types,$resp_fuids,$resp_mime_types
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
@@ -18,26 +18,7 @@
     		else\
     		{\
     		  _brohttp->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "web";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_HTTP rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brohttp_hourly") \
-  {\
-    log_warning(get_stat("brohttp_hourly") + " messages received from input BRO_HTTP in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_HTTP rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brohttp_rate") and get_stat("brohttp_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_HTTP for 30 minutes!"); \
-  }
-	</Schedule>
+
 </Input>
