--- a/Bro_IDS/bro_notice.conf
+++ b/Bro_IDS/bro_notice.conf
@@ -4,9 +4,10 @@
 
 <Extension _bronotice>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$fileid,$mimetype,$description,$protocol,$category,$msg,$subject,$source,$dst,$p,$n,$peer,$action,$suppressfor,$dropped,$countrycode,$region,$city,$lat,$long
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$fuid,$file_mime_type,$file_desc,$proto,$note,$msg,$sub,$src,$dst,$p,$n,$peer_descr,$actions,$suppress_for,$dropped,$remote_location.country_code,$remote_location.region,$remote_location.city,$remote_location.latitude,$remote_location.longitude
     Delimiter \t
     EscapeControl FALSE
+    UndefValue	-
 </Extension>
 
 <Input BRO_NOTICE>
@@ -17,26 +18,6 @@
     		else\
     		{\
     		  _bronotice->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "alert";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_NOTICE rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("bronotice_hourly") \
-  {\
-    log_warning(get_stat("bronotice_hourly") + " messages received from input BRO_NOTICE in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_NOTICE rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("bronotice_rate") and get_stat("bronotice_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_NOTICE for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
