--- a/Bro_IDS/bro_smtp.conf
+++ b/Bro_IDS/bro_smtp.conf
@@ -4,9 +4,10 @@
 
 <Extension _brosmtp>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$count,$messageid,$mailfrom,$rcptto,$eventtime,$from,$to,$replyto,$transactionid,$inreplyto,$subject,$clientip,$firstreceived,$secondreceived,$lastreply,$path,$useragent,$fileid,$webclient
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$trans_depth,$helo,$mailfrom,$rcptto,$date,$from,$to,$reply_to,$msg_id,$in_reply_to,$subject,$x_originating_ip,$first_received,$second_received,$last_reply,$path,$user_agent,$tls,$fuids,$is_webmail
     Delimiter \t
     EscapeControl FALSE
+    UndefValue	-
 </Extension>
 
 <Input BRO_SMTP>
@@ -17,26 +18,6 @@
     		else\
     		{\
     		  _brosmtp->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "email";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_SMTP rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brosmtp_hourly") \
-  {\
-    log_warning(get_stat("brosmtp_hourly") + " messages received from input BRO_SMTP in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_SMTP rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brosmtp_rate") and get_stat("brosmtp_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_SMTP for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
