--- a/Bro_IDS/bro_software.conf
+++ b/Bro_IDS/bro_software.conf
@@ -4,9 +4,10 @@
 
 <Extension _brosoftware>
     Module	xm_csv
-    Fields	$eventtimeutc,$domain,$srcport,$category,$application,$major,$minor,$minor2,$minor3,$addl,$content
+    Fields	$ts,$host,$host_p,$software_type,$name,$version.major,$version.minor,$version.minor2,$version.minor3,$version.addl,$unparsed_version,$url
     Delimiter \t
     EscapeControl FALSE
+    UndefValue	-
 </Extension>
 
 <Input BRO_SOFTWARE>
@@ -17,26 +18,7 @@
     		else\
     		{\
     		  _brosoftware->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "software";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_SOFTWARE rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brosoftware_hourly") \
-  {\
-    log_warning(get_stat("brosoftware_hourly") + " messages received from input BRO_SOFTWARE in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_SOFTWARE rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brosoftware_rate") and get_stat("brosoftware_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_SOFTWARE for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
+
