--- a/Bro_IDS/bro_ssh.conf
+++ b/Bro_IDS/bro_ssh.conf
@@ -4,7 +4,7 @@
 
 <Extension _brossh>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$status,$direction,$srchost,$server,$srccountry,$region,$city,$lat,$long
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$status,$direction,$client,$server,$remote_location.country_code,$remote_location.region,$remote_location.city,$remote_location.latitude,$remote_location.longitude
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
@@ -18,26 +18,6 @@
     		else\
     		{\
     		  _brossh->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "ssh";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_SSH rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("brossh_hourly") \
-  {\
-    log_warning(get_stat("brossh_hourly") + " messages received from input BRO_SSH in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_SSH rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("brossh_rate") and get_stat("brossh_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_SSH for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
