--- a/Bro_IDS/bro_weird.conf
+++ b/Bro_IDS/bro_weird.conf
@@ -4,7 +4,7 @@
 
 <Extension _broweird>
     Module	xm_csv
-    Fields	$eventtimeutc,$connectionid,$srcipv4,$srcport,$dstipv4,$dstport,$description,$info,$notice,$peer
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$name,$addl,$notice,$peer
     Delimiter \t
     UndefValue	-
     EscapeControl FALSE
@@ -18,26 +18,6 @@
     		else\
     		{\
     		  _broweird->parse_csv();\
-              $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $SourceName = "bro";\
-			  $tag = "alert";\
-			  to_syslog_ietf(); to_json();\
+			  to_syslog_ietf();\
             }
-    <Schedule>
-  #Hourly BRO_WEIRD rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("broweird_hourly") \
-  {\
-    log_warning(get_stat("broweird_hourly") + " messages received from input BRO_WEIRD in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute BRO_WEIRD rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("broweird_rate") and get_stat("broweird_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input BRO_WEIRD for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
