--- a/bro_ids/bro_dpd.conf
+++ b/bro_ids/bro_dpd.conf
@@ -1,23 +1,23 @@
 ########################################
-# INPUT BRO IDS Syslog Log             #
+# INPUT BRO IDS DPD Log                #
 ########################################
 
-<Extension _brosyslog>
+<Extension _brodpd>
     Module	xm_csv
-    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$facility,$severity,$message
+    Fields	$ts,$uid,$id.orig_h,$id.orig_p,$id.resp_h,$id.resp_p,$proto,$analyzer,$failure_reason
     Delimiter \t
     EscapeControl FALSE
     UndefValue	-
 </Extension>
 
-<Input bro_syslog>
+<Input bro_dpd>
     Module	im_file
-    File	"/nsm/bro/logs/current/ssl.log"
+    File	"/nsm/bro/logs/current/dpd.log"
     SavePos	TRUE
     Exec	if $raw_event =~ /^#/ drop();\
-    		else\
+        	else\
     		{\
-    		  _brosyslog->parse_csv();\
+    		  _brodpd->parse_csv();\
 			  to_syslog_ietf();\
             }
 </Input>
