--- a/Linux/throttle_out.conf
+++ b/Linux/throttle_out.conf
@@ -2,7 +2,7 @@
 # Throttled 5k EPS Output              #
 ########################################
 
-<Output sender_pv>
+<Output throttled>
     Module	om_exec
     Command	/usr/bin/socat
     Arg		-u
