--- a/Windows/ms_dhcpv4.conf
+++ b/Windows/ms_dhcpv4.conf
@@ -4,7 +4,7 @@
 
 <Extension _dhcpv4>
     Module	xm_csv
-    Fields  $eventid,$date,$time,$action,$srcipv4,$srchost,$srcmac,$username,$transactionid,$qresult,$probationtime,$correlationid,$dhcid,$vendorhex,$vendorascii,$userhex,$userascii,$relayagentinfo
+    Fields  $id,$date,$time,$description,$ip_address,$host_name,$mac_address,$user_name,$transactionid,$qresult,$probationtime,$correlationid,$dhcid,$vendorclass_hex,$vendorclass_ascii,$userclass_hex,$userclass_ascii,$relayagentinformation
     Delimiter ,
     EscapeControl FALSE
 </Extension>
@@ -16,27 +16,7 @@
     SavePos	TRUE
     Exec	_dhcpv4->parse_csv();\
 			$eventtime = $date + " " + $time;\
-			$Hostname = host_ip();\
-			$FQDN = hostname_fqdn();\
-			$tag = "dhcp";\
-			$SourceName = "microsoft_dhcp";\
 			delete($date);\
 			delete($time);\
-			to_json();
-    <Schedule>
-  #Hourly MS_DHCPv4 rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("msdhcpv4_hourly") \
-  {\
-    log_warning(get_stat("msdhcpv4_hourly") + " messages received from input MS_DHCPv4 in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute MS_DHCPv4 rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("msdhcpv4_rate") and get_stat("msdhcpv4_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input MS_DHCPv4 for 30 minutes!"); \
-  }
-	</Schedule>
+			to_syslog_ietf();
 </Input>
