--- a/Windows/ms_dhcpv6.conf
+++ b/Windows/ms_dhcpv6.conf
@@ -4,7 +4,7 @@
 
 <Extension _dhcpv6>
     Module	xm_csv
-    Fields  $eventid,$date,$time,$action,$srcipv6,$srchost,$srchost,$errormessage,$length,$duidbytes,$username,$dhcid,$subnet
+    Fields  $id,$date,$time,$description,$ipv6_address,$host_name,$error_code,$duid_length,$duid_bytes_hex,$user_name,$dhcid,$subnet_prefix
     Delimiter ,
     EscapeControl FALSE
 </Extension>
@@ -16,27 +16,7 @@
     SavePos	TRUE
     Exec	_dhcpv6->parse_csv();\
 			$eventtime = $date + " " + $time;\
-			$Hostname = host_ip();\
-			$FQDN = hostname_fqdn();\
-			$tag = "dhcp";\
-			$SourceName = "microsoft_dhcp";\
 			delete($date);\
-			delete($time);
-			to_json();
-    <Schedule>
-  #Hourly MS_DHCPv6 rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("msdhcpv6_hourly") \
-  {\
-    log_warning(get_stat("msdhcpv6_hourly") + " messages received from input MS_DHCPv6 in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute MS_DHCPv6 rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("msdhcpv6_rate") and get_stat("msdhcpv6_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input MS_DHCPv6 for 30 minutes!"); \
-  }
-	</Schedule>
+			delete($time);\
+			to_syslog_ietf();
 </Input>
