--- a/Windows/ms_dns.conf
+++ b/Windows/ms_dns.conf
@@ -4,7 +4,7 @@
 
 <Extension _msdns>
     Module	xm_csv
-    Fields	$date,$time,$threadid,$info,$referenceid,$protocol,$direction,$srcipv4,$xid,$query,$opcode,$operationid,$flagtype,$result,$querytype,$domain
+    Fields	$date,$time,$thread_id,$context,$internal_packet_identifier,$udp_tcp_indicator,$send_receive_indicator,$remote_ip,$xid_hex,$query_response,$opcode,$flags_hex,$flags_char_codes,$responsecode,$question_type,$question_name
     Delimiter	\t
     EscapeControl FALSE
     UndefValue  " "
@@ -21,27 +21,7 @@
     		_msdns->parse_csv();\
 			$eventtime = parsedate($date + " " + $time);\
 			if $domain =~ s/(\([1-9]*\))/./g; if $domain =~ s/\(0\)/ /g;\
-			$Hostname = host_ip();\
-			$FQDN = hostname_fqdn();\
-			$tag = "dns";\
-			$SourceName = "microsoft_dns";\
 			delete("date");\
 			delete("time");\
-			to_json();
-    <Schedule>
-  #Hourly MS_DNS rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("msdns_hourly") \
-  {\
-    log_warning(get_stat("msdns_hourly") + " messages received from input MS_DNS in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute MS_DNS rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("msdns_rate") and get_stat("msdns_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input MS_DNS for 30 minutes!"); \
-  }
-	</Schedule>
+			to_syslog_ietf();
 </Input>
