--- a/Windows/ms_exchangev15.conf
+++ b/Windows/ms_exchangev15.conf
@@ -9,12 +9,6 @@
     EscapeControl FALSE
 </Extension>
 
-<Extension _kvp_exchmt>
-    Module	xm_kvp
-    KVPDelimiter ;
-    KVDelimiter	=
-</Extension>
-
 <Input MS_EXCH_MT>
     Module	im_file
     #Path to Exchange Logs, make sure to use double backslashes
@@ -24,27 +18,6 @@
     		else\
     		{\
 			  _csv_exchmt->parse_csv();\
-			  _kvp_exchmt->parse_kvp($info);\
-			  $Hostname = host_ip();\
-			  $FQDN = hostname_fqdn();\
-			  $tag = "email";\
-			  $SourceName = "microsoft_exchange";\
-			  to_json();\
+			  to_syslog_ietf();\
 			}
-    <Schedule>
-  #Hourly MS_EXCHANGE rate monitoring
-  Every	3600 sec
-  Exec	if defined get_stat("msexchange_hourly") \
-  {\
-    log_warning(get_stat("msexchange_hourly") + " messages received from input MS_EXCHANGE in past 1 hour"); \
-  }
-	</Schedule>
-	<Schedule>
-  #30 Minute MS_EXCHANGE rate monitoring for dropped source
-  Every	1800 sec
-  Exec	if defined get_stat("msexchange_rate") and get_stat("msexchange_rate") <= 1 \
-  {\
-  	log_warning("No messages received from input MS_EXCHANGE for 30 minutes!"); \
-  }
-	</Schedule>
 </Input>
