--- a/Windows/ms_iisv6.conf
+++ b/Windows/ms_iisv6.conf
@@ -4,7 +4,7 @@
 
 <Extension _w3ciis6>
     Module	xm_csv
-    Fields	$date,$time,$site,$server,$dstip,$httpmethod,$uri,$query,$dstport,$username,$srcip,$protocolver,$useragent,$cookie,$referrer,$srchost,$statuscode,$substatus,$winstatus,$sentbytes,$rcvdbytes,$duration
+    Fields	date,$time,$c-ip,$cs-username,$s-sitename,$s-computername,$s-ip,$s-port,$cs-method,$cs-uri-stem,$cs-uri-query,$sc-status,$sc-win32-status,$sc-bytes,$cs-bytes,$time-taken,$cs-version,$cs-host,$cs-user-agent,$cs-cookie,$cs-referer
     Delimiter	' '
     EscapeControl FALSE
     UndefValue  -
@@ -20,13 +20,9 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#     		  to_json();\
+#     		  to_syslog_ietf();\
 #			}
 # </Input>
 
@@ -40,13 +36,9 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json();\
+#			  to_syslog_ietf();\
 #			}
 # </Input>
 
@@ -60,13 +52,8 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json();\
+#			  to_syslog_ietf();\
 #			}
 # </Input>
-
