--- a/Windows/ms_iisv7.conf
+++ b/Windows/ms_iisv7.conf
@@ -4,7 +4,7 @@
 
 <Extension _w3c7>
     Module	xm_csv
-    Fields	date,time,s-sitename,s-computername,s-ip,cs-method,cs-uri-stem,cs-uri-query,s-port,cs-username,c-ip,cs-version,cs(User-Agent),cs(Cookie),cs(Referer),cs-host,sc-status,sc-substatus,sc-win32-status,sc-bytes,cs-bytes,time-taken
+    Fields	$date,$cs-version,$c-ip,$time-taken,$sc-bytes,$s-ip,$cs-username,$cs-uri-stem,$cs-bytes,$s-computername,$cs-host,$s-port,$cs-uri-query,$cs-cookie,$cs-method,$sc-substatus,$cs-referer,$sc-win32-status,$cs-user-agent,$sc-status,$time,$s-sitename
     Delimiter	' '
     EscapeControl FALSE
     UndefValue  -
@@ -20,13 +20,9 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json();\
+#			  to_syslog_ietf();\
 #			}
 # </Input>
 
@@ -40,13 +36,9 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json();\
+#			  to_syslog_ietf();\
 #			}
 # </Input>
 
@@ -60,12 +52,8 @@
 #			{\
 #			  _w3c7->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  $Hostname = host_ip();\
-# 			  $FQDN = hostname_fqdn();\
-# 			  $tag = "web";\
-# 			  $SourceName = "microsoft_iis";\
 # 			  delete("date");\
 # 			  delete("time");\
-#			  to_json();\
+#			  to_syslog_ietf();\
 #			}
 # </Input>
