Exchange Version Update

--- a/Windows/ms_exchangev15.conf
+++ b/Windows/ms_exchangev15.conf
@@ -1,5 +1,5 @@
 ########################################
-# INPUT Microsft Exchange Logs         #
+# INPUT Microsoft Exchange 2013 Logs   #
 ########################################
 
 <Extension _csv_exchmt>
