--- a/Windows/ms_iisv6.conf
+++ b/Windows/ms_iisv6.conf
@@ -20,8 +20,8 @@
 #			{\
 #			  _w3c->parse_csv();\
 #			  $eventtime = parsedate($date + " " + $time);\
-# 			  delete("date");\
-# 			  delete("time");\
+ 			  delete("date");\
+ 			  delete("time");\
 #     		  to_syslog_ietf();\
 #			}
 # </Input>
